--- a/html/ALCLEARWaschhandschuh.html
+++ b/html/ALCLEARWaschhandschuh.html
@@ -30,14 +30,35 @@
       <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
     </ul>
   </nav>
-  <h1> ALCLEAR Waschhandschuh </h1>
-  <h2> Preis: 12,99 € inkl. MwSt. </h2>
-  <h5> Status: Auf Lager </h5>
-  <h5> Versandkostenfrei </h5>
-  <h5> Lieferzeit: 1-3 Werktage </h5>
-  <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
-  <input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
-              <button id="addProduct" onclick="Input1()">In den Warenkorb</button>
+  
+  <div class="currentposition">
+  <h7> ALCLEAR Waschhandschuh </h7>
+  </div>
+<div class="container wasdienedgeschafthaben">
+    <div class="row">
+  <table>
+
+
+    <tr>
+      <td>
+        <div class="product-grid2">
+          <div class="product-image2">
+          <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
+          <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
+        </div>
+        </div>
+        </td>
+      <td>Preis: 12,99 € inkl. MwSt. </br>
+          Status: Auf Lager</br>
+          Versandkostenfrei</br>
+          Lieferzeit: 1-3 Werktage</td>
+      <td >Stückzahl: </br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> </br></br><button id="addProduct" onclick="Input1()">In den </br>Warenkorb</button></td>
+  
+    </tr>
+  </table>
+  
+  
+              
   <p>
 	Der ALCLEAR Waschhandschuh für die schonende Handwäsche
 
@@ -45,19 +66,20 @@
 	sondern vorzugsweise mit einem hochwertigen Waschhandschuh wie dem ALCLEAR Waschhandschuh.
 	Hierbei handelt es sich um einen für den professionellen Einsatzbereich entwickelten Fahrzeug- Waschhandschuh
 	aus hochwertiger und funktionaler Mikrofaser. Der besonders dicke und saugfähige Handschuh sorgt dafür,
-	dass alle gängigen Verschmutzungen schonend vom Lack abgelöst und ebenso schonend abtransportiert werden.
+	dass alle gängigen Verschmutzungen schonend vom Lack abgelöst und ebenso schonend abtransportiert werden.</br>
 	Dafür wandern sie ins Innere des Gewebes wo sie keine Gefahr mehr für den Lack darstellen und somit keine
 	Swirls oder Mikrokratzer produzieren. Ebenso leicht lässt sich der Schmutz jedoch aus dem ALCLEAR Waschhandschuh ausspülen,
 	sodass der Waschhandschuh direkt wieder einsatzbereit ist. Seine langen und flauschigen Fasern nehmen jede Menge Wasser
 	auf und gleiten hervorragend über alle gängigen Lacke. Nun brauchst du also nur noch ein geeignetes Auto-Shampoo aus unserem Deluxe Car Care Onlineshop.
 	Hilft bei der Schaumproduktion und ist waschbar.
-
+  </br>
 	Dank der dicht gewebten Mikrofasern mit einem Flächengewicht von 500 GSM ist der 
 	ALCLEAR Waschhandschuh extrem schonend zum Lack. Darüber hinaus hilft er dir, massig Schaum für
 	noch bessere Gleiteigenschaften und Schmutzlösekraft zu produzieren. Die enge Handgelenkmanschette
 	des ALCLEAR Waschhandschuh stellt während der Handwäsche sicher, dass der Handschuh stets fest sitzt und
-	du ihn dadurch perfekt kontrollieren kannst. Natürlich ist auf der Manschette das bekannte ALCLEAR
-	Logo angebracht. So sieht man auf den ersten Blick, dass du bei der
+  du ihn dadurch perfekt kontrollieren kannst.</br> 
+  Natürlich ist auf der Manschette das bekannte ALCLEAR Logo angebracht. 
+  So sieht man auf den ersten Blick, dass du bei der
 	Autopflege auf Qualität setzt. Den ALCLEAR Waschhandschuh aus Mikrofaser kannst du in
 	der Maschine waschen. Verwende hierfür ein Mikrofaserwaschmittel aus unserem Sortiment und verzichte
 	stets auf Weichspüler. Auch auf die Trocknung im Wäschetrockner solltest du verzichten,
@@ -65,6 +87,8 @@
   </p>
  
   <hr>
+  </div>
+  </div>
   <!-- footer -->
   <div class="footer-basic">
     <footer>
