--- a/html/ALCLEARWaschhandschuh.html
+++ b/html/ALCLEARWaschhandschuh.html
@@ -58,7 +58,7 @@
   </table>
   
   
-              
+  <div class="container wasdienedgeschafthaben">           
   <p>
 	Der ALCLEAR Waschhandschuh für die schonende Handwäsche
 
@@ -85,8 +85,8 @@
 	stets auf Weichspüler. Auch auf die Trocknung im Wäschetrockner solltest du verzichten,
 	um die Funktionalität des Handschuhs dauerhaft zu erhalten.
   </p>
+</div> 
  
-  <hr>
   </div>
   </div>
   <!-- footer -->
