--- a/html/ALCLEARWaschhandschuh.html
+++ b/html/ALCLEARWaschhandschuh.html
@@ -48,18 +48,18 @@
         </div>
         </div>
         </td>
-      <td>Preis: 12,99 € inkl. MwSt. </br>
-          Status: Auf Lager</br>
-          Versandkostenfrei</br>
+      <td>Preis: 12,99 € inkl. MwSt. <br>
+          Status: Auf Lager<br>
+          Versandkostenfrei<br>
           Lieferzeit: 1-3 Werktage</td>
-      <td >Stückzahl: </br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> </br></br><button id="addProduct" onclick="Input1()">In den </br>Warenkorb</button></td>
+      <td >Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den </br>Warenkorb</button></td>
   
     </tr>
   </table>
   
   
   <div class="container wasdienedgeschafthaben">           
-  <p>
+	<h8><b>Artikelbeschreibung:</b></h8><br><br>
 	Der ALCLEAR Waschhandschuh für die schonende Handwäsche
 
 	Wer sein Auto liebt, wäscht von Hand und mit 2 Eimern. Doch nicht mit irgendeinem Lappen,
@@ -72,20 +72,19 @@
 	sodass der Waschhandschuh direkt wieder einsatzbereit ist. Seine langen und flauschigen Fasern nehmen jede Menge Wasser
 	auf und gleiten hervorragend über alle gängigen Lacke. Nun brauchst du also nur noch ein geeignetes Auto-Shampoo aus unserem Deluxe Car Care Onlineshop.
 	Hilft bei der Schaumproduktion und ist waschbar.
-  </br>
+    <br>
 	Dank der dicht gewebten Mikrofasern mit einem Flächengewicht von 500 GSM ist der 
 	ALCLEAR Waschhandschuh extrem schonend zum Lack. Darüber hinaus hilft er dir, massig Schaum für
 	noch bessere Gleiteigenschaften und Schmutzlösekraft zu produzieren. Die enge Handgelenkmanschette
 	des ALCLEAR Waschhandschuh stellt während der Handwäsche sicher, dass der Handschuh stets fest sitzt und
-  du ihn dadurch perfekt kontrollieren kannst.</br> 
+  du ihn dadurch perfekt kontrollieren kannst.<br> 
   Natürlich ist auf der Manschette das bekannte ALCLEAR Logo angebracht. 
   So sieht man auf den ersten Blick, dass du bei der
 	Autopflege auf Qualität setzt. Den ALCLEAR Waschhandschuh aus Mikrofaser kannst du in
 	der Maschine waschen. Verwende hierfür ein Mikrofaserwaschmittel aus unserem Sortiment und verzichte
 	stets auf Weichspüler. Auch auf die Trocknung im Wäschetrockner solltest du verzichten,
 	um die Funktionalität des Handschuhs dauerhaft zu erhalten.
-  </p>
-</div> 
+  </div> 
  
   </div>
   </div>
