--- a/html/ALCLEARWaschhandschuh.html
+++ b/html/ALCLEARWaschhandschuh.html
@@ -48,11 +48,11 @@
         </div>
         </div>
         </td>
-      <td>Preis: 12,99 € inkl. MwSt. <br>
+      <td class="großeschrift">Preis: 12,99 € inkl. MwSt. <br>
           Status: Auf Lager<br>
           Versandkostenfrei<br>
           Lieferzeit: 1-3 Werktage</td>
-      <td >Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den </br>Warenkorb</button></td>
+      <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den </br>Warenkorb</button></td>
   
     </tr>
   </table>
