--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -44,7 +44,7 @@
         </tr>
 
         <tr>
-          <td><a href="ALCLEARWaschhandschuh.html" style="color: black;">Gloria FM10</a></td>
+          <td><a href="GloriaFM10.html" style="color: black;">Gloria FM10</a></td>
           <td><input step="1" data-step-max="10" type="number" value="3" data-decimals="0" min="0" max="360" class="col-3" /></td>
           <td>29,99 €</td>
           <td>89,97 €</td>
@@ -52,7 +52,7 @@
     </div>
     </tr>
     <tr>
-      <td><a href="ALCLEARWaschhandschuh.html" style="color: black;">SONAX AutoShampoo</a></td>
+      <td><a href="SONAXAutoShampoo.html" style="color: black;">SONAX AutoShampoo</a></td>
       <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="0" max="360" class="col-3" /></td>
       <td>5,79 €</td>
       <td>5,79 €</td>
