--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -41,14 +41,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
+			<a href="ALCLEARWaschhandschuh.html">
 
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
-
-              <p class="add-to-cart">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</p>
+			</a>
+              <a class="add-to-cart" href="ALCLEARWaschhandschuh.html">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a>
             </div>
             <div class="product-content">
-              <h3 class="title">ALCLEAR Waschhandschuh</br>12,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="ALCLEARWaschhandschuh.html">ALCLEAR Waschhandschuh</br>12,99 €</br>inkl. MwSt.</a></h3>
               <input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button id="addProduct" onclick="Input1()">In den Warenkorb</button>
             </div>
@@ -57,15 +58,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+			<a href="EimerGritGuard.html">
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51yi-JJt6PL._AC_SY355_.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61mrtbNymWL._AC_SY450_.jpg">
+			</a>
 
-
-              <p class="add-to-cart">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</p>
+              <a class="add-to-cart" href="EimerGritGuard.html">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">2x Eimer mit Grit Guard</br>54,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="EimerGritGuard.html">2x Eimer mit Grit Guard</br>54,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -74,15 +75,16 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
+			<a href="GloriaFM10.html">
 
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41T7WahKIsL._AC_.jpg">
               <img class="pic-2" src="../img/Spruehkoepfe.jpg">
-
-
-              <p class="add-to-cart">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</p>
+			</a>
+	
+              <a class="add-to-cart" href="GloriaFM10.html">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Gloria FM10</br>29,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="GloriaFM10.html">Gloria FM10</br>29,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -91,15 +93,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+			<a href="GLORIATopFoam.html">
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
-
-
-              <p class="add-to-cart">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</p>
+			</a>
+		
+              <a class="add-to-cart" href="GLORIATopFoam.html">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">GLORIA Top Foam</br>14,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="GLORIATopFoam.html">GLORIA Top Foam</br>14,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -108,14 +110,14 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+			<a href="SONAXAutoShampoo.html">
               <img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
-
-              <p class="add-to-cart">Shampoo für die Autowäsche.</p>
+			</a>
+              <a class="add-to-cart" href="SONAXAutoShampoo.html">Shampoo für die Autowäsche.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">SONAX AutoShampoo</br>5,79 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="SONAXAutoShampoo.html">SONAX AutoShampoo</br>5,79 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -124,15 +126,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+			<a href="PetzoldsLackknete.html">
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
+			</a>
 
-
-              <p class="add-to-cart">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</p>
+              <a class="add-to-cart" href="PetzoldsLackknete.html">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Petzolds Lackknete</br>16,90 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="PetzoldsLackknete.html">Petzolds Lackknete</br>16,90 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
