--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -51,7 +51,7 @@
             <div class="product-content">
               <h3 class="title"><a href="ALCLEARWaschhandschuh.html">ALCLEAR Waschhandschuh</br>12,99 €</br>inkl. MwSt.</a></h3>
               <input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
-              <button id="addProduct" onclick="Input1()">In den Warenkorb</button>
+              <button id="addProduct1" onclick="Input1()">In den Warenkorb</button>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
             <div class="product-content">
               <h3 class="title"><a href="EimerGritGuard.html">2x Eimer mit Grit Guard</br>54,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
-              <button>In den Warenkorb</button>
+              <button id="addProduct2" onclick="Input1()">In den Warenkorb</button>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
             <div class="product-content">
               <h3 class="title"><a href="GloriaFM10.html">Gloria FM10</br>29,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
-              <button>In den Warenkorb</button>
+              <button id="addProduct3" onclick="Input1()">In den Warenkorb</button>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
             <div class="product-content">
               <h3 class="title"><a href="GLORIATopFoam.html">GLORIA Top Foam</br>14,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
-              <button>In den Warenkorb</button>
+              <button id="addProduct4" onclick="Input1()">In den Warenkorb</button>
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
             <div class="product-content">
               <h3 class="title"><a href="SONAXAutoShampoo.html">SONAX AutoShampoo</br>5,79 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
-              <button>In den Warenkorb</button>
+              <button id="addProduct5" onclick="Input1()">In den Warenkorb</button>
             </div>
           </div>
         </div>
@@ -136,7 +136,7 @@
             <div class="product-content">
               <h3 class="title"><a href="PetzoldsLackknete.html">Petzolds Lackknete</br>16,90 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
-              <button>In den Warenkorb</button>
+              <button id="addProduct6" onclick="Input1()">In den Warenkorb</button>
             </div>
           </div>
         </div>
