--- a/html/Verkauf3.html
+++ b/html/Verkauf3.html
@@ -41,14 +41,14 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="Soft99_Fusso.html">
               <img class="pic-1" src="../img/Fusso.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/41vZUPuiPHL._AC_SY355_.jpg">
-
-              <p class="add-to-cart">Wachs mit sehr gutem Apperleffekt und langer Standzeit.</p>
+                </a>
+              <a class="add-to-cart" href="Soft99_Fusso.html">Wachs mit sehr gutem Apperleffekt und langer Standzeit.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Soft99 Fusso Coat 12M</br>34,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="Soft99_Fusso.html">Soft99 Fusso Coat 12M</br>34,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -57,15 +57,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="Soft99_Fusso_Coat_Detailer.html">
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/712i%2BFQjqwL._AC_SY606_.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/910l%2BsQXswL._AC_SX355_.jpg">
 
-
-              <p class="add-to-cart"> Sprühwachs, hiermit kann man das Soft99 Fusso Coat 12M pflegen.</p>
+              </a>
+              <a class="add-to-cart" href="Soft99_Fusso_Coat_Detailer.html"> Sprühwachs, hiermit kann man das Soft99 Fusso Coat 12M pflegen.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Soft99 Fusso Coat Detailer</br>19,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="Soft99_Fusso_Coat_Detailer.html">Soft99 Fusso Coat Detailer</br>19,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -74,15 +74,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="ADBL_Synthetic_Spray_Wax.html">
               <img class="pic-1" src="../img/ADBL.jpg">
               <img class="pic-2" src="../img/ADBL.jpg">
+              </a>
 
-
-              <p class="add-to-cart">Sprühwachs mit einem guten Apperleffekt und mittlerer Standzeit.</p>
+              <a class="add-to-cart" href="ADBL_Synthetic_Spray_Wax.html">Sprühwachs mit einem guten Apperleffekt und mittlerer Standzeit.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">ADBL Synthetic Spray Wax</br>23,49 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="ADBL_Synthetic_Spray_Wax.html">ADBL Synthetic Spray Wax</br>23,49 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -91,15 +91,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="SWISSVAX_SWIZÖL.html">
               <img class="pic-1" src="../img/Swissvax.jpg">
               <img class="pic-2" src="../img/Swissvax.jpg">
+              </a>
 
-
-              <p class="add-to-cart">Hochwertiges Carnaubawachs, um Felgen zu versiegeln.</p>
+              <a class="add-to-cart" href="SWISSVAX_SWIZÖL.html">Hochwertiges Carnaubawachs, um Felgen zu versiegeln.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">SWISSVAX SWIZÖL Autobahn</br>39,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="SWISSVAX_SWIZÖL.html">SWISSVAX SWIZÖL Autobahn</br>39,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -108,14 +108,14 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="Gyeon_Keramikversiegelung.html">
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81FIwjhjUdL._AC_SX355_.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81FIwjhjUdL._AC_SX355_.jpg">
-
-              <p class="add-to-cart">Hochwertige Keramikversiegelung mit sehr langer Standzeit.</p>
+            </a>
+              <a class="add-to-cart" href="Gyeon_Keramikversiegelung.html">Hochwertige Keramikversiegelung mit sehr langer Standzeit.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Gyeon Keramikversiegelung Q2 One</br>69,99 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="Gyeon_Keramikversiegelung.html">Gyeon Keramikversiegelung Q2 One</br>69,99 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
@@ -124,15 +124,15 @@
         <div class="col-md-3 col-sm-6">
           <div class="product-grid2">
             <div class="product-image2">
-
+              <a href="Koch_Chemie.html">
               <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61Id6ErWKVL._AC_SY355_.jpg">
               <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61Id6ErWKVL._AC_SY355_.jpg">
+            </a>
 
-
-              <p class="add-to-cart">Hochwertige Nanoversiegelung mit sehr langer Standzeit.</p>
+              <a class="add-to-cart" href="Koch_Chemie.html">Hochwertige Nanoversiegelung mit sehr langer Standzeit.</a>
             </div>
             <div class="product-content">
-              <h3 class="title">Koch Chemie 1K-Nano Lackversiegelung</br>114,90 €</br>inkl. MwSt.</h3>
+              <h3 class="title"><a href="Koch_Chemie.html">Koch Chemie 1K-Nano Lackversiegelung</br>114,90 €</br>inkl. MwSt.</a></h3>
               <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
               <button>In den Warenkorb</button>
             </div>
