--- a/html/Gyeon_Keramikversiegelung.html
+++ b/html/Gyeon_Keramikversiegelung.html
@@ -60,7 +60,7 @@
   
   <div class="container wasdienedgeschafthaben">           
     <h8><b>Artikelbeschreibung:</b></h8><br><br>
-    der Produktlinie von Gyeon ist das Q² One zwischen dem Gyeon CanCoat und dem Gyeon Prime anzusiedeln. 
+    In der Produktlinie von Gyeon ist das Q² One zwischen dem Gyeon CanCoat und dem Gyeon Prime anzusiedeln. 
     Dabei wurde es speziell für Autopflege-Neulinge und Laien mit wenig Erfahrung entwickelt. 
     Es bietet einen höheren Schutz und einen höheren Glanzfaktor als das Gyeon CanCoat. 
     Die Standzeit ist jedoch nicht so hoch, wie die des Gyeon Prime.
